update author name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "makyo-test",
+  "name": "makyo-test-custom-select",
+  "author": {
+    "name": "Kautzar Ali Bani",
+    "email": "kalibani.ka@gmail.com"
+  },
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
